# esp32-webrtc-example

./: .gitignore  CMakeLists.txt  EspIdf.Dockerfile  README.md  docker-compose.yml  readme.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
components/codec_board/: board_cfg.txt
components/esp_capture/src/impl/capture_video_src/: capture_video_v4l2_src.c
components/esp_webrtc/impl/peer_default/: CHANGELOG.md
components/esp_webrtc/impl/peer_default/include/: esp_peer_default.h
components/esp_webrtc/impl/whip_signal/: whip_signaling.c
components/esp_webrtc/include/: esp_peer.h  esp_webrtc.h
components/esp_webrtc/src/: esp_peer.c  esp_webrtc.c
components/peer/: CMakeLists.txt
main/: CMakeLists.txt  board.c  common.h  idf_component.yml  main.c  main.h  media_sys.c  settings.h  webrtc.c  wifi.c
whip-server/: go.mod  go.sum  index.html  main.go
